--- a/src/App.css
+++ b/src/App.css
@@ -116,9 +116,10 @@ h3 {
 	text-align: center;
 	padding: 20px;
 	font-size: 1.5rem;
-	background: #666;
-	max-width: 50%;
+	background: #cc1034;
+	max-width: 70%;
 	margin: auto;
+	border-radius: 8px;
 }
 
 /* Info Box */
