--- a/src/App.css
+++ b/src/App.css
@@ -64,7 +64,10 @@ form {
 .hellooo {
 	border-radius: 10px;
 	/* max-width: 600px; */
-	margin: auto;
+	/* margin: auto; */
+	margin-top: 20px;
+	/* background: #333;
+	color: aliceblue; */
 }
 
 .chartjs-size-monitor {
